[gd_scene load_steps=2 format=3 uid="uid://b2jr7lhb8jgke"]

[ext_resource type="Script" path="res://editor/settings/TextureSelect.gd" id="1_givg1"]

[node name="TextureSelect" type="Window"]
initial_position = 2
size = Vector2i(800, 600)
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_givg1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select a texture:"

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
max_columns = 0
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2i(100, 100)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ClearTexButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clear Texture"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Select"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_activated" from="MarginContainer/VBoxContainer/ItemList" to="." method="select_texture"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ClearTexButton" to="." method="clear_texture"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_close_requested"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SelectButton" to="." method="select_texture"]
